--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@schedulemaker/bannerjs",
+  "name": "@IxPrumxI/bannerjs",
   "version": "0.4.0",
   "description": "Javascript module to retrieve data from Ellucian Banner",
   "main": "index.js",
@@ -15,14 +15,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/schedulemaker/bannerjs.git"
+    "url": "git+https://github.com/IxPrumxI/bannerjs.git"
   },
   "author": "Paul Hutchings",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/schedulemaker/bannerjs/issues"
+    "url": "https://github.com/IxPrumxI/bannerjs/issues"
   },
-  "homepage": "https://github.com/schedulemaker/bannerjs#readme",
+  "homepage": "https://github.com/IxPrumxI/bannerjs#readme",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   }
